fix invisible bar bug

--- a/content/content.css
+++ b/content/content.css
@@ -4,20 +4,19 @@
     top: 0;
     left: 0;
     width: 100%;
-    padding-bottom: 25px;
-    opacity: 0;
-    transform: translateY(-100%) translateY(20px);
     z-index: 100000;
     overflow-x: hidden;
     text-align: center;
-    transition: .5s ease transform, 0.4s ease opacity, 0.5s 0s ease padding-bottom;
+    transition: .5s ease transform, .5s ease height, .5s ease opacity;
+    opacity: 1;
+    background-color: green;
 }
 
-.bbar.visible {
-    transform: translateX(0);
-    opacity: 1;
-    transition: .5s ease transform, 0.2s ease opacity;
-    padding-bottom: 0;
+.bbar.hiddenBBB {
+    opacity: 0;
+    transform: translateY(-100%) translateY(20px);
+    padding-bottom: 25px;
+    transition: .5s ease transform, .5s ease height, .5s ease opacity, 0s .5s ease padding-bottom;
 }
 
 .bbar div {
@@ -25,13 +24,19 @@
     background-color: rgb(255, 255, 255);
     border-bottom: 1px solid #ccc;
     padding: 5px;
+    border-bottom: 1px solid #ccc;
 }
 
 .bbar a {
     display: inline-block;
     border-radius: 10px;
     padding: 14px;
-    transition: .1s ease background-color;
+    transform: scale(1);
+    transition: .1s ease background-color, .5s ease transform;
+}
+
+.bbar.hiddenBBB a {
+    transform: scale(0.5);
 }
 
 .bbar img {
